# CrawlVenus

./: .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  DISTRIBUTED_SETUP_GUIDE.md  DISTRIBUTED_TROUBLESHOOTING.md  Phi.md  README.md  RUNPOD_SETUP_GUIDE.md  SCRIPTS_CLEANUP_SUMMARY.md  TESTING_GUIDE.md  distributed_config.env  env.example  pyproject.toml  requirements.txt
Explorer/: __init__.ipynb  __init__.py  device.ipynb  device.py
docs/: PHI_GROUND_INTEGRATION.md
scripts/: cleanup_repo.py  cleanup_scripts.py  distributed_apk_tester.py  emergency_fix_runpod.py  final_report_generator.py  fix_critical_components.py  fix_runpod_dependencies.py  fix_test_directories.py  install_tesseract.py  local_adb_server.py  quick_fix_dotenv.py  quick_fix_env.py  quick_start_distributed.py  runpod_ai_fix.py  runpod_minimal_config.py  setup_api_keys.py  setup_distributed_testing.py  test_phi_ground.py  universal_apk_tester.py  upload_to_runpod.py
src/: __init__.ipynb  __init__.py
src/ai/: __init__.ipynb  __init__.py  action_determiner.ipynb  action_determiner.py  app_recovery_prompts.ipynb  app_recovery_prompts.py  openai_client.ipynb  openai_client.py  phi_ground.ipynb  phi_ground.py  phi_ground.py.backup2  prompt.ipynb  prompt.py  prompt_builder.ipynb  prompt_builder.py  response_parser.ipynb  response_parser.py  ui_venus_ground.py
src/api/: __init__.ipynb  __init__.py  app.ipynb  app.py  routes.ipynb  routes.py
src/automation/: __init__.ipynb  __init__.py  action_executor.ipynb  action_executor.py  autofill.ipynb  autofill.py  error_handler.ipynb  error_handler.py  state_tracker.ipynb  state_tracker.py  task_planner.ipynb  task_planner.py
src/core/: __init__.ipynb  __init__.py  action_prioritizer.ipynb  action_prioritizer.py  app_foreground_recovery.ipynb  app_foreground_recovery.py  app_recovery.ipynb  app_recovery.py  config.ipynb  config.py  device_manager.ipynb  device_manager.py  distributed_config.py  distributed_device_manager.py  element_tracker.ipynb  element_tracker.py  explorer.ipynb  explorer.py  explorer_gpt.ipynb  explorer_gpt.py  foreground_service_builder.ipynb  foreground_service_builder.py  logger.ipynb  logger.py  popup_classifier.ipynb  popup_classifier.py  state_serializer.ipynb  state_serializer.py  state_tracker.ipynb  state_tracker.py
src/utils/: __init__.ipynb  __init__.py  file_utils.ipynb  file_utils.py  helpers.ipynb  helpers.py  performance.ipynb  performance.py  validation.ipynb  validation.py
src/vision/: __init__.ipynb  __init__.py  clickable_detector.ipynb  clickable_detector.py  debug.ipynb  debug.py  engine.ipynb  engine.py  models.ipynb  models.py  screencap.ipynb  screencap.py  template_matcher.ipynb  template_matcher.py  venus_ground.py
src/vision/templates/: README.md
